--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@
 									<li>Building custom test setups for various product testing that adheres to clients needs.</li>
 									<li>Using MTS machines to perform compression, torque and tensile testing.</li>
 									<li>Taking the test data and compiling reports for clients. </li>
-									<li>Co-chairman of employment engagement committee, to arrange events and think of ways to boost employee moral.</li>
+									<li>Co-chairman of employment engagement committee to arrange events and think of ways to boost employee moral.</li>
 								</ul>	
 						</div>
 					</div>
